[workspace]
members = [
    "sandstone",
    "examples/status_handler",
    "sandstone/src/sandstone-derive",
]
default-members = ["sandstone", "examples/status_handler", "sandstone/src/sandstone-derive"]

resolver = "2"

[build.env]
passthrough = [
    "RUSTFLAGS",
    "RUST_BACKTRACE",
]

#[profile.dev]
#opt-level = 3
#overflow-checks = true
#lto = true

#[profile.test]
#inherits = "release"