[workspace]
members = [
    "sandstone",
    "examples/status_handler",
    "sandstone/src/sandstone-derive", "examples/login-handler",
]
default-members = ["sandstone", "examples/*", "sandstone/src/sandstone-derive"]

resolver = "2"

#[profile.dev]
#opt-level = 3
#overflow-checks = true
#lto = true

#[profile.test]
#inherits = "release"