[workspace]
members = [
    "sandstone",
    "sandstone/src/sandstone-derive",
    "sandstone/src/util/mojang-api",
    "examples/server/status_handler",
    "examples/server/login_handler", "examples/client/client_login",
]
default-members = ["sandstone", "examples/server/*", "sandstone/src/sandstone-derive"]

resolver = "2"

#[profile.dev]
#opt-level = 3
#overflow-checks = true
#lto = true

#[profile.test]
#inherits = "release"