[package]
name = "sandstone"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Networking library for Minecraft: Java Edition servers"
repository = "https://github.com/dec4234/sandstone"
homepage = "https://github.com/dec4234/sandstone"
readme = "../README.md"
keywords = ["minecraft", "networking", "server", "protocol"]
categories = ["network-programming", "game-development", "game-engines"]

exclude = ["src/sandstone-derive"]

[dependencies]
simple_logger = "5.0.0"
tokio = {version = "1.45.0", features = ["full"]}
#rayon = "1.10.0"
cfb8 = {version = "0.8.1", features = ["std"]}
hex = "0.4.3"
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
uuid = {version = "1.16.0", features = ["v4"]}
base64 = "0.22.1"
log = "0.4.27"
image = {version = "0.25.6", features = ["default", "png"]}
#flate2 = {version = "1.0.30", features = ["zlib"]}
regex = "1.11.1"
fastsnbt = "0.2.0"
thiserror = "2.0.12"
aes = "0.8.4"

sandstone-derive = {path = "src/sandstone-derive"} #todo: implications of local reference

[dev-dependencies]
#craftio-rs = "0.1.0"
#mcproto-rs = {version = "0.2.0", features = ["v1_15_2"]}