[package]
name = "sandstone"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "Networking library for Minecraft: Java Edition servers"
repository = "https://github.com/dec4234/sandstone"
homepage = "https://github.com/dec4234/sandstone"
readme = "../README.md"
keywords = ["minecraft", "networking", "server", "protocol"]
categories = ["network-programming", "game-development", "game-engines"]

exclude = ["src/sandstone-derive"]

[dependencies]
tokio = {version = "1.52.3", features = ["full"]}
cfb8 = {version = "0.9.1"}
hex = "0.4.3"
serde_json = "1.0.150"
serde = {version = "1.0.228", features = ["derive"]}
uuid = {version = "1.23.3", features = ["v4"]}
base64 = "0.22.1"
log = "0.4.32"
image = {version = "0.25.10", features = ["default", "png"]}
flate2 = "1.1.9"
regex = "1.12.4"
thiserror = "2.0.18"
aes = "0.9.1"
hickory-resolver = "0.26.1"

paste = "1.0"
sandstone-derive = {path = "src/sandstone-derive"} #todo: implications of local reference
mc-data = {path = "src/protocol/game/info/content/mc-data"}

[features]
vendored = ["mc-data/vendored"] # Pull block and item data from static JSON

[lints.rust]
mismatched_lifetime_syntaxes = "allow"