[package]
name = "mojang-api"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
reqwest = { version = "0.13.4", features = ["query"] }
log = "0.4.32"
sha1 = "0.11.0"
tokio = {version = "1.45.1", features = ["sync", "macros"]}
uuid = { version = "1.23.2", features = ["v4"] }

[dev-dependencies]
rsa = { version = "0.10.0-rc.18", features = ["std"] }
rand_chacha = "0.10.0"
