[package]
name = "mc-data"
version = "0.1.0"
edition = "2024"
description = "Compile-time wrapper around PrismarineJS/minecraft-data (blocks & items)"

[lib]
name = "mc_data"
path = "src/lib.rs"

[features]
vendored = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[build-dependencies]
ureq = "3.3.0"
serde_json = "1.0.150"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"
